badly written, but code to run icon change for sorting now working.  defs should refine.

--- a/DocSearch2.1/Views/Shared/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/Shared/_PublicTable.cshtml
@@ -1,5 +1,18 @@
 ﻿@model IPagedList<PublicVM>
 
+<script>
+    function abc($$this) {
+
+        var ascending = '@ViewData["SortOrder"]';
+
+        if (ascending == "True") {
+            $("#" + $$this.children('i').attr('id')).removeClass("fa-sort").addClass("fa-sort-asc");
+        } else {
+            $("#" + $$this.children('i').attr('id')).removeClass("fa-sort").addClass("fa-sort-desc");
+        }
+    }
+</script>
+
 @if ((bool)ViewData["goodSearch"] == false)
 {
     <script type="text/javascript">
@@ -37,7 +50,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Type of Document", "fa-sort", "filterLink", "postNavbar"))
+                       }), "#public_table", "replace-with", "GET", "Type of Document", "fa-sort", "filterLink", "postNavbar", "abc1"))
                     </th>
                     <th>
                         <!--2-->
@@ -48,7 +61,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Issue Date", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Issue Date", "fa-sort", "filterLink", "postNavbar", "abc2"))
                     </th>
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
@@ -58,7 +71,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Method", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Method", "fa-sort", "filterLink", "postNavbar", "abc3"))
                     </th> <!--3-->
                     <th>
                         <!--4-->
@@ -69,7 +82,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Policy #", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Policy #", "fa-sort", "filterLink", "postNavbar", "abc4"))
                     </th>
                     <th>
                         <!--5-->
@@ -80,7 +93,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Effective Date", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Effective Date", "fa-sort", "filterLink", "postNavbar", "abc5"))
                     </th>
                     <th>
                         <!--6-->
@@ -91,7 +104,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Originator", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Originator", "fa-sort", "filterLink", "postNavbar", "abc6"))
                     </th>
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
@@ -101,7 +114,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Reason", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Reason", "fa-sort", "filterLink", "postNavbar", "abc7"))
                     </th><!--7-->
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
@@ -111,7 +124,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Supplier #", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Supplier #", "fa-sort", "filterLink", "postNavbar", "abc8"))
                     </th><!--8-->
                     <th>
                         <!--9-->
@@ -122,7 +135,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Description", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Description", "fa-sort", "filterLink", "postNavbar", "abc9"))
                     </th>
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
@@ -132,7 +145,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "File", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "File", "fa-sort", "filterLink", "postNavbar", "abc10"))
                     </th><!--10-->
                     <th>More</th><!--11-->
                     @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
@@ -145,7 +158,7 @@
                        subNav = ViewData["currentNav"],
                        prevNav = ViewData["currentNavTitle"],
                        searchTerm = TempData["SearchTerm"]
-                   }), "#public_table", "replace-with", "GET", "Document Id", "fa-sort", "filterLink", "postNavbar"))
+                   }), "#public_table", "replace-with", "GET", "Document Id", "fa-sort", "filterLink", "postNavbar", "abc11"))
                         </th>
                     }
                     @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
