Fixed up loose ends for file enxtension display on table

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -46,8 +46,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.First().Recipient)
                 </th>
-                <th>
+                @*<th>
                     @Html.DisplayNameFor(model => model.First().FileType)
+                </th>*@
+                <th>
+                    @*@Html.DisplayNameFor(model => model.First().FileExtension)*@
+                    File
                 </th>
                 <th>Active</th>
             </tr>
