--- a/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
+++ b/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
@@ -60,7 +60,7 @@
         @Html.TextBoxFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.Recipient, "", new { @class = "text-danger" })
     </td>
-    <td>
+    @*<td>
         @Html.ActionLink(Model.FileType, "FileDisplay", "PublicVM", new { documentId = Model.Document_ID }, new { target = "_blank" })
         @if (Model.FileType == "Picture JPEG")
         {
@@ -68,6 +68,16 @@
                         <div class="preview_image">
                             @Html.ActionLink("[Preview]", "FileDisplay", "PublicVM", new { documentId = Model.Document_ID }, new { @class = "preview", id = Model.Document_ID + 'a' })
                         </div>
+        }
+    </td>*@
+    <td>
+        @Html.ActionLink(Model.FileExtension, "FileDisplay", "PublicVM", new { documentId = Model.Document_ID }, new { target = "_blank" })
+        @if (Model.FileExtension.Trim() == "jpg" || Model.FileExtension.Trim() == "png")
+        {
+            <br />
+            <div class="preview_image">
+                @Html.ActionLink("[Preview]", "FileDisplay", "PublicVM", new { documentId = Model.Document_ID }, new { @class = "preview", id = Model.Document_ID + 'a' })
+            </div>
         }
     </td>
     <td>
