Can now do a very primitive save.  Need input validations for allowable business logic choices for inputs, as well as the 'admin' checker seems to be not seen and the redirect is not correct

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -4,6 +4,8 @@
 {
     @Html.AntiForgeryToken()
 
+    <input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />
+
     <table class="edit-table table">
         <thead>
             <tr class="edit-rows">
