--- a/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
+++ b/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
@@ -13,6 +13,7 @@
     </td>
     <td>
         @Html.DisplayFor(model => model.Document_ID, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.Document_ID)
     </td>
     <td>
         @Html.DisplayFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
