added some styling for admin input area

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -534,3 +534,12 @@ textarea {
 #public_table_inner {
     
 }
+
+.admin-and-pagination>div {
+    text-align: center;
+    
+}
+
+.form-inputs>div {
+    margin-bottom: 5px;
+}
