--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
           content="width=device-width,
                initial-scale=1.0" />
     <!--,maximum-scale=1.0, user-scalable=no-->
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge"> <!--May not need this, used bc bundling wasnt working, may just be a patch to fix for now-->
     <title>@ViewBag.Title</title>
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
     @Styles.Render("~/Content/css")
