dynamically created inputs in edit view now has validation built in, required atm

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<PublicVM>
 
-@using (Html.BeginForm("Edit", "Admin", FormMethod.Post))
+@using (Html.BeginForm("Edit", "Admin", FormMethod.Post, new { id = "updateListSubmit"}))
 {
     @Html.AntiForgeryToken()
 
