started code to do select all checkboxes

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -55,7 +55,7 @@
                     @*@Html.DisplayNameFor(model => model.First().FileExtension)*@
                     File
                 </th>
-                <th>Active</th>
+                <th>Active <input type="checkbox" class="selectAll" /></th>
             </tr>
         </thead>
         <tbody>
