--- a/DocSearch2.1/Views/Shared/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/Shared/_PublicTable.cshtml
@@ -208,7 +208,7 @@
                     }
                     @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
                     {
-                        <th>Select</th>
+                        <th>Select <input type="checkbox" class="selectAll" /></th>
                     }
                 </tr>
             </thead>
