select all checkboxes for public table and edit table working as intended

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -55,7 +55,7 @@
                     @*@Html.DisplayNameFor(model => model.First().FileExtension)*@
                     File
                 </th>
-                <th>Active <input type="checkbox" class="selectAll" /></th>
+                <th class="input_class">Active <input type="checkbox" name="selectAllBox" class="selectAll" /></th>
             </tr>
         </thead>
         <tbody>
