implemented a simple, custom error page when invalid clientId and or docId file view

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -571,3 +571,9 @@ textarea {
         color: red;
         text-decoration: underline;
     }
+
+.error-page {
+    width: 50%;
+    margin: 10% auto;
+    text-align: center;
+}
