--- a/DocSearch2.1/Views/Shared/Errors.cshtml
+++ b/DocSearch2.1/Views/Shared/Errors.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Error";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-<h2>Please call Jackie Cheng at 604-543-7788 ext. 296 if you need help</h2>
+<div class="error-page">
+    <h4 class="text-danger">An error occurred while processing your request.</h4>
+    <h4>Please contact IT-Support if you need assistance.</h4>
+</div>
